# sensitive-content-cleaner

./: .gitignore  README.md  pyproject.toml
src/sensitive_content_cleaner/: main.py  presidio_engine.py  text_parser.py
src/sensitive_content_cleaner/recognizer/: custom_recognizers.py  localized_predefined_recognizers.py
